--- a/src/app/components/component-communication/component-communication.component.html
+++ b/src/app/components/component-communication/component-communication.component.html
@@ -1,2 +1,3 @@
+<!-- Sert à afficher le composant active-user-->
 <app-active-user (userUpdated)="updateUser($event)"></app-active-user>
 <app-user-data [user]="activeUser"></app-user-data>
